name:                record-encode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/record-encode
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2018 Marco Zocca
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Record.Encode
                       Data.Record.Encode.Generic
  build-depends:       base >= 4.7 && < 5
                     , generics-sop
                     , template-haskell



test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , record-encode
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/record-encode
