name:                record-encode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/record-encode
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2018 Marco Zocca
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall -ddump-splices -ddump-to-file
  hs-source-dirs:      src
  exposed-modules:     Data.Record.Encode
  other-modules:       Data.Record.Encode.Generics
                       Data.Record.Decode.TH
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
                     , vector


test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     LibSpec
  build-depends:       base
                     , record-encode
                     , hspec
                     , QuickCheck
                     , vector

source-repository head
  type:     git
  location: https://github.com/ocramz/record-encode
